--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,17 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>GStox</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
+  <script src="assets/apexcharts/apexcharts.min.js"></script>
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
